backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepecoscan-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepecoscan-backend
  template:
    metadata:
      labels:
        app: deepecoscan-backend
    spec:
      containers:
      - name: deepecoscan-backend
        image: hbastian/deepecoscan-backend:latest
        ports:
        - containerPort: 3000
