backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepecoscan-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: deepeco.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deepecoscan-frontend-service
            port:
              number: 80

      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: deepecoscan-service
            port:
              number: 3000
